--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -33,7 +33,7 @@
     </style>
 
     <style name="AppTheme.ActionBar.Preference" parent="AppTheme">
-        <item name="colorPrimary">#FFD740</item>
+        <item name="colorPrimary">#FFC400</item>
         <item name="colorPrimaryDark">#FFC400</item>
         <item name="colorAccent">#80CBC4</item>
         <item name="actionBarSize">70dp</item>
